--- a/fantasy_first/package.json
+++ b/fantasy_first/package.json
@@ -10,6 +10,7 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
