--- a/fantasy_first/package.json
+++ b/fantasy_first/package.json
@@ -18,8 +18,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-minify": "^0.4.3",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-input-range": "^1.3.0",
+    "style-loader": "^0.23.0",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0"
   }
